kitten/reported_bugs/c/c-50891/stderr.txt
mutant.c:5:3: warning: use of GNU statement expression extension [-Wgnu-statement-expression]

( {

  ^

mutant.c:5:2: warning: '(' and '{' tokens introducing statement expression are separated by whitespace [-Wcompound-token-split-by-space]

( {

~^~

mutant.c:7:10: error: use of undeclared identifier 'x'

switch ( x )

         ^

mutant.c:18:2: warning: '}' and ')' tokens terminating statement expression are separated by whitespace [-Wcompound-token-split-by-space]

} )

~^~

clang-trunk: /tmp/tmp.FIfHBNID2p-clang-builder/llvm-project/clang/lib/AST/ExprConstant.cpp:10825: bool EvaluateInteger(const clang::Expr*, llvm::APSInt&, {anonymous}::EvalInfo&): Assertion `!E->isValueDependent()' failed.

PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.

Stack dump:

0.	Program arguments: clang-trunk -O3 -g3 -c -Wall -Wextra -Weverything mutant.c

1.	mutant.c:19:3: current parser token ';'

2.	mutant.c:3:1: parsing function body 'foo'

3.	mutant.c:3:1: in compound statement ('{}')

Stack dump without symbol names (ensure you have llvm-symbolizer in your PATH or set the environment var `LLVM_SYMBOLIZER_PATH` to point to it):

clang-trunk(+0x394ec64)[0x557459a12c64]

clang-trunk(_ZN4llvm3sys15CleanupOnSignalEm+0xe4)[0x557459a10a84]

clang-trunk(+0x38938c8)[0x5574599578c8]

/lib/x86_64-linux-gnu/libpthread.so.0(+0x153c0)[0x7f07175f93c0]

/lib/x86_64-linux-gnu/libc.so.6(gsignal+0xcb)[0x7f071709918b]

/lib/x86_64-linux-gnu/libc.so.6(abort+0x12b)[0x7f0717078859]

/lib/x86_64-linux-gnu/libc.so.6(+0x25729)[0x7f0717078729]

/lib/x86_64-linux-gnu/libc.so.6(+0x36f36)[0x7f0717089f36]

clang-trunk(+0x6a25c29)[0x55745cae9c29]

clang-trunk(+0x6a27cff)[0x55745caebcff]

clang-trunk(+0x6a232db)[0x55745cae72db]

clang-trunk(+0x6a1237e)[0x55745cad637e]

clang-trunk(+0x6a0d042)[0x55745cad1042]

clang-trunk(+0x6a0da0d)[0x55745cad1a0d]

clang-trunk(+0x6a0dc62)[0x55745cad1c62]

clang-trunk(+0x6a587ff)[0x55745cb1c7ff]

clang-trunk(+0x6a66038)[0x55745cb2a038]

clang-trunk(+0x6a230d8)[0x55745cae70d8]

clang-trunk(+0x6a1237e)[0x55745cad637e]

clang-trunk(+0x6a142af)[0x55745cad82af]

clang-trunk(+0x6a66643)[0x55745cb2a643]

clang-trunk(+0x6a23c75)[0x55745cae7c75]

clang-trunk(+0x6a1237e)[0x55745cad637e]

clang-trunk(+0x6a1c319)[0x55745cae0319]

clang-trunk(_ZNK5clang4Expr19EvaluateForOverflowERKNS_10ASTContextE+0x212)[0x55745cae1b22]

clang-trunk(_ZN5clang4Sema19CheckForIntOverflowEPNS_4ExprE+0x1f5)[0x55745bdafd55]

clang-trunk(_ZN5clang4Sema18CheckCompletedExprEPNS_4ExprENS_14SourceLocationEb+0x121)[0x55745bdff3e1]

clang-trunk(_ZN5clang4Sema19ActOnFinishFullExprEPNS_4ExprENS_14SourceLocationEbb+0x122)[0x55745c1a2352]

clang-trunk(_ZN5clang4Sema15BuildReturnStmtENS_14SourceLocationEPNS_4ExprE+0x773)[0x55745c42a993]

clang-trunk(_ZN5clang4Sema15ActOnReturnStmtENS_14SourceLocationEPNS_4ExprEPNS_5ScopeE+0x8a)[0x55745c42b67a]

clang-trunk(_ZN5clang6Parser20ParseReturnStatementEv+0xbf)[0x55745bce41ef]

clang-trunk(_ZN5clang6Parser42ParseStatementOrDeclarationAfterAttributesERN4llvm11SmallVectorIPNS_4StmtELj32EEENS0_17ParsedStmtContextEPNS_14SourceLocationERNS_25ParsedAttributesWithRangeE+0x5aa)[0x55745bce768a]

clang-trunk(_ZN5clang6Parser27ParseStatementOrDeclarationERN4llvm11SmallVectorIPNS_4StmtELj32EEENS0_17ParsedStmtContextEPNS_14SourceLocationE+0x9a)[0x55745bce83ba]

clang-trunk(_ZN5clang6Parser26ParseCompoundStatementBodyEb+0x5f9)[0x55745bce9339]

clang-trunk(_ZN5clang6Parser26ParseFunctionStatementBodyEPNS_4DeclERNS0_10ParseScopeE+0xda)[0x55745bceb94a]

clang-trunk(_ZN5clang6Parser23ParseFunctionDefinitionERNS_17ParsingDeclaratorERKNS0_18ParsedTemplateInfoEPNS0_18LateParsedAttrListE+0x682)[0x55745bc31c22]

clang-trunk(_ZN5clang6Parser14ParseDeclGroupERNS_15ParsingDeclSpecENS_17DeclaratorContextEPNS_14SourceLocationEPNS0_12ForRangeInitE+0x740)[0x55745bc5e580]

clang-trunk(_ZN5clang6Parser30ParseDeclOrFunctionDefInternalERNS_25ParsedAttributesWithRangeERNS_15ParsingDeclSpecENS_15AccessSpecifierE+0x226)[0x55745bc2c426]

clang-trunk(+0x5b68a11)[0x55745bc2ca11]

clang-trunk(_ZN5clang6Parser24ParseExternalDeclarationERNS_25ParsedAttributesWithRangeEPNS_15ParsingDeclSpecE+0x217)[0x55745bc33217]

clang-trunk(_ZN5clang6Parser17ParseTopLevelDeclERNS_9OpaquePtrINS_12DeclGroupRefEEEb+0x1ce)[0x55745bc347ae]

clang-trunk(_ZN5clang8ParseASTERNS_4SemaEbb+0x219)[0x55745bc26ff9]

clang-trunk(_ZN5clang13CodeGenAction13ExecuteActionEv+0x178)[0x55745ab6e678]

clang-trunk(_ZN5clang14FrontendAction7ExecuteEv+0xd9)[0x55745a41e029]

clang-trunk(_ZN5clang16CompilerInstance13ExecuteActionERNS_14FrontendActionE+0x146)[0x55745a3b11e6]

clang-trunk(_ZN5clang25ExecuteCompilerInvocationEPNS_16CompilerInstanceE+0x930)[0x55745a4fbeb0]

clang-trunk(_Z8cc1_mainN4llvm8ArrayRefIPKcEES2_Pv+0x7f6)[0x5574573246f6]

clang-trunk(+0x125ca38)[0x557457320a38]

clang-trunk(+0x417ddb9)[0x55745a241db9]

clang-trunk(_ZN4llvm20CrashRecoveryContext9RunSafelyENS_12function_refIFvvEEE+0xbc)[0x557459957a4c]

clang-trunk(+0x417e55d)[0x55745a24255d]

clang-trunk(_ZNK5clang6driver11Compilation14ExecuteCommandERKNS0_7CommandERPS3_+0x9b)[0x55745a214ceb]

clang-trunk(_ZNK5clang6driver11Compilation11ExecuteJobsERKNS0_7JobListERN4llvm15SmallVectorImplISt4pairIiPKNS0_7CommandEEEE+0x119)[0x55745a215809]

clang-trunk(_ZN5clang6driver6Driver18ExecuteCompilationERNS0_11CompilationERN4llvm15SmallVectorImplISt4pairIiPKNS0_7CommandEEEE+0x99)[0x55745a2203b9]

clang-trunk(main+0x18af)[0x55745724f4ef]

/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3)[0x7f071707a0b3]

clang-trunk(_start+0x2e)[0x5574573205ae]

clang-13: error: clang frontend command failed with exit code 134 (use -v to see invocation)

clang version 13.0.0 (https://github.com/llvm/llvm-project.git 5c8659801a4976ef2b327f4071d98086efd42a36)

Target: x86_64-unknown-linux-gnu

Thread model: posix

InstalledDir: /home/cnsun/usr/bin

clang-13: note: diagnostic msg: 

********************



PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:

Preprocessed source(s) and associated run script(s) are located at:

clang-13: note: diagnostic msg: /tmp/mutant-e49a61.c

clang-13: note: diagnostic msg: /tmp/mutant-e49a61.sh

clang-13: note: diagnostic msg: 



********************

